force-app/main/default/objects/Customer_Alert__c/Customer_Alert__c.object-meta.xml
<CustomObject>
    <description>고객 포털(T5-07 &quot;고객 운영 콘솔&quot;)에 표시할 목적으로 발행하는 고객 노출용 경보 레코드. 실제 SCADA/BMS 알람 라이프사이클을 흉내낸 데모 단계 오브젝트 — Case/Work Order와 자동 연동하지 않는다(고객이 &quot;알람 확인&quot;을 눌러도 Status__c만 바뀐다). 조기 확인 신호(advisory)이며 장애 확정·자동 출동·자동 진단·예지보전을 의미하지 않는다.</description>
    <label>Customer Alert</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>