force-app/main/default/objects/Customer_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Alerts</relationshipLabel>
    <relationshipName>Customer_Alerts2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sharing Set이 Customer_Alert__c를 인식하려면 Account/Contact/User를 직접 가리키는 필드가 있어야 한다(2026-08-30 확인 — Asset을 거친 간접 경로는 Sharing Set 오브젝트 목록에 안 뜸). Asset__r.AccountId와 항상 같은 값으로 유지 — 레코드 생성 시 채운다.</description>
</CustomField>