force-app/main/default/objects/Customer_Alert__c/fields/Acknowledged_At__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_At__c</fullName>
    <label>확인 시각</label>
    <type>DateTime</type>
</CustomField>