force-app/main/default/objects/Customer_Alert__c/fields/Alarm_Tag__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Tag__c</fullName>
    <description>SCADA/CMMS 알람 태그 표기(예: CHW_FLOW_LOW_BASELINE). 데모 표기용 텍스트, 실제 알람 엔진 연동 아님.</description>
    <label>알람 태그</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>