force-app/main/default/objects/Customer_Alert__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Alerts</relationshipLabel>
    <relationshipName>Customer_Alerts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>