force-app/main/default/objects/Customer_Alert__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <description>배너/드로어에 그대로 노출되는 분류 문구. 예: &quot;ADVISORY / 주의&quot;.</description>
    <label>분류 레이블</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>