force-app/main/default/objects/Customer_Alert__c/fields/Current_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_Text__c</fullName>
    <description>드로어의 &quot;Current PV&quot; 표시용 텍스트. 예: &quot;71 L/min&quot;. 계산 필드가 아니라 데모 표기용 원문.</description>
    <label>Current Value (Display)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>