force-app/main/default/objects/Customer_Alert__c/fields/Envelope_Max__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Max__c</fullName>
    <description>정상 운전 범위 상한(숫자). Envelope 막대 렌더링용.</description>
    <label>Envelope Max</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>