force-app/main/default/objects/Customer_Alert__c/fields/Envelope_Min__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Min__c</fullName>
    <description>정상 운전 범위 하한(숫자). Envelope 막대 렌더링용.</description>
    <label>Envelope Min</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>