force-app/main/default/objects/Customer_Alert__c/fields/Normal_Range_Text__c.field-meta.xml
<CustomField>
    <fullName>Normal_Range_Text__c</fullName>
    <description>드로어의 &quot;Normal operating envelope&quot; 표시용 텍스트. 예: &quot;95–115 L/min&quot;.</description>
    <label>정상 범위(표시)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>