force-app/main/default/objects/Customer_Alert__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>P1(가장 심각) ~ P4. 고객 포털 배너의 &quot;P3&quot; 같은 태그로 그대로 노출된다.</description>
    <label>우선순위</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
                <default>true</default>
                <label>P3</label>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>