force-app/main/default/objects/Customer_Alert__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <description>드로어의 "권장 행동" 박스 문구.</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>