force-app/main/default/objects/Customer_Alert__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>경보 발생 시각. &quot;지속 시간&quot;은 여기서 Apex가 실시간 계산한다(저장 필드 아님).</description>
    <label>알림 발생 시각</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>