force-app/main/default/objects/Customer_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>경보 라이프사이클. 고객의 &quot;알람 확인&quot; 버튼은 Unacknowledged→Acknowledged만 바꾼다 — Resolved는 내부 운영자만 처리(이 포털에서는 못 바꿈).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Unacknowledged</fullName>
                <default>true</default>
                <label>Active - Unacknowledged</label>
            </value>
            <value>
                <fullName>Active - Acknowledged</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>